--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn2code",
+  "name": "firebase-astro-auth",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,8 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.7",
-    "@astrojs/check": "^0.9.4",
-    "typescript": "^5.6.3"
+    "@astrojs/check": "^0.7.0",
+    "@astrojs/db": "^0.11.4",
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.6.0",
+    "astro": "^4.10.1",
+    "astro-icon": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "firebase": "^10.12.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   }
 }
