--- a/package.json
+++ b/package.json
@@ -10,16 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
-    "@astrojs/db": "^0.11.4",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.6.0",
-    "astro": "^4.10.1",
-    "astro-icon": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "firebase": "^10.12.2",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
+    "@astrojs/check": "^0.9.4",
+    "astro": "^4.16.7",
+    "firebase-astro-auth": "file:",
+    "learn2code": "file:",
+    "typescript": "^5.6.3"
   }
 }
