--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.7",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^3.6.2",
+    "@monaco-editor/react": "^4.6.0",
+    "astro": "^4.16.7",
+    "bootstrap": "^5.3.3",
+    "prismjs": "^1.29.0",
+    "react-ace": "^12.0.0",
+    "react-simple-code-editor": "^0.14.1",
     "typescript": "^5.6.3"
   }
 }
