--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro-icon": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "firebase": "^10.12.2",
+    "firebase-astro-auth": "file:",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
